[project]
name = "ban-appeal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeremy Banker", email = "Loredous@loredous.net" }
]
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.4",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]

[project.scripts]
ban-appeal = "ban_appeal:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
